force-app/main/default/objects/Associated_Training_Contacts__c/Associated_Training_Contacts__c.object-meta.xml
<CustomObject>
    <label>Associated Training Contact</label>
    <nameField>
        <displayFormat>ATC-{0000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Associated Training Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>