force-app/main/default/objects/Associated_Training_Contacts__c/fields/A_What_does_the_phase_CM_requires_CM__c.field-meta.xml
<CustomField>
    <fullName>A_What_does_the_phase_CM_requires_CM__c</fullName>
    <inlineHelpText>What does the phrase &quot;change management requires change management&quot; mean to you</inlineHelpText>
    <label>A-What does the phase &quot;CM requires CM&quot;</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>