force-app/main/default/objects/Associated_Training_Contacts__c/fields/Acclaim_Badge_Issued__c.field-meta.xml
<CustomField>
    <fullName>Acclaim_Badge_Issued__c</fullName>
    <label>Credly Badge Issued</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>