force-app/main/default/objects/Associated_Training_Contacts__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>Contact__r.Account.Name</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>