force-app/main/default/objects/Associated_Training_Contacts__c/fields/ACMP_Chapter__c.field-meta.xml
<CustomField>
    <fullName>ACMP_Chapter__c</fullName>
    <label>ACMP Chapter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>