force-app/main/default/objects/Associated_Training_Contacts__c/fields/activist_learning_style_rank__c.field-meta.xml
<CustomField>
    <fullName>activist_learning_style_rank__c</fullName>
    <label>Activist Learning Style Rank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>