force-app/main/default/objects/Associated_Training_Contacts__c/fields/Address_Received__c.field-meta.xml
<CustomField>
    <fullName>Address_Received__c</fullName>
    <label>Address Received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>