force-app/main/default/objects/Associated_Training_Contacts__c/fields/ATC_Email__c.field-meta.xml
<CustomField>
    <fullName>ATC_Email__c</fullName>
    <formula>Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ATC Email</label>
    <type>Text</type>
</CustomField>