force-app/main/default/objects/Associated_Training_Contacts__c/fields/B_Describe_the_three_states_of_change__c.field-meta.xml
<CustomField>
    <fullName>B_Describe_the_three_states_of_change__c</fullName>
    <inlineHelpText>Describe the three states of change (Current, Transition and Future) and why do they provide an important context for managing change</inlineHelpText>
    <label>B-Describe the three states of change</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>