force-app/main/default/objects/Associated_Training_Contacts__c/fields/C_What_are_the_first_3_CM_steps__c.field-meta.xml
<CustomField>
    <fullName>C_What_are_the_first_3_CM_steps__c</fullName>
    <inlineHelpText>What are the first three change management steps you would take if you were brought into a project late in the fame (e.g., a few weeks before &quot;go-live&quot;)?</inlineHelpText>
    <label>C-What are the first 3 CM steps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>