force-app/main/default/objects/Associated_Training_Contacts__c/fields/Care_Email__c.field-meta.xml
<CustomField>
    <fullName>Care_Email__c</fullName>
    <label>Care Email</label>
    <type>Date</type>
</CustomField>