force-app/main/default/objects/Associated_Training_Contacts__c/fields/CEU_Requested__c.field-meta.xml
<CustomField>
    <fullName>CEU_Requested__c</fullName>
    <label>CEU Requested</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>