force-app/main/default/objects/Associated_Training_Contacts__c/fields/Completed_Profile_Questions__c.field-meta.xml
<CustomField>
    <fullName>Completed_Profile_Questions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed Profile Questions</label>
    <type>Checkbox</type>
</CustomField>