force-app/main/default/objects/Associated_Training_Contacts__c/fields/Consent_Date_Within_Range__c.field-meta.xml
<CustomField>
    <fullName>Consent_Date_Within_Range__c</fullName>
    <formula>IF(((Program_End_Date_Feedback__c -1 &lt;= Contact__r.Acclaim_Retro_Badge_Consent__c)

&amp;&amp;((ISPICKVAL(Status__c,&apos;Certified&apos;) || (ISPICKVAL(Status__c,&apos;Attended&apos;))))),

&quot;Issue Badge&quot;, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consent Date Within Range</label>
    <type>Text</type>
</CustomField>