force-app/main/default/objects/Associated_Training_Contacts__c/fields/Contact_Email_for_GetFeedback__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_for_GetFeedback__c</fullName>
    <label>Contact Email for GetFeedback</label>
    <type>Email</type>
</CustomField>