force-app/main/default/objects/Associated_Training_Contacts__c/fields/Contact_Link__c.field-meta.xml
<CustomField>
    <fullName>Contact_Link__c</fullName>
    <description>This field is used to generate a link to the contact on the associated training related list on a training event.  During the transition to lightning we discovered the assoc. training contacts were not clickable.  This is the workaround.  MB 2/26</description>
    <formula>HYPERLINK(IF($User.UIThemeDisplayed = &quot;Theme4d&quot;, &quot;/lightning/r/Contact/&quot; &amp; Contact__r.Id &amp; &quot;/view&quot;, &quot;/&quot; &amp; Contact__r.Id), Contact__r.FirstName, &quot;_top&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Name</label>
    <type>Text</type>
</CustomField>