force-app/main/default/objects/Associated_Training_Contacts__c/fields/Credly_Acclaim_Consent__c.field-meta.xml
<CustomField>
    <fullName>Credly_Acclaim_Consent__c</fullName>
    <description>If this box is checked, we have been given consent to share this information with Credly to issue a digital badge.</description>
    <inlineHelpText>If this box is checked, we have been given consent to share this information with Credly to issue a digital badge.</inlineHelpText>
    <label>Credly Consent</label>
    <length>5</length>
    <type>Text</type>
</CustomField>