force-app/main/default/objects/Associated_Training_Contacts__c/fields/current_change_management_competency__c.field-meta.xml
<CustomField>
    <fullName>current_change_management_competency__c</fullName>
    <label>Current Change Management Competency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>