force-app/main/default/objects/Associated_Training_Contacts__c/fields/current_role__c.field-meta.xml
<CustomField>
    <fullName>current_role__c</fullName>
    <label>Current Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>