force-app/main/default/objects/Associated_Training_Contacts__c/fields/Current_Use_Of_Methodology__c.field-meta.xml
<CustomField>
    <fullName>Current_Use_Of_Methodology__c</fullName>
    <label>Current Use Of Methodology</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>General Guidance</fullName>
            </value>
            <value>
                <fullName>Activity Checklist</fullName>
            </value>
            <value>
                <fullName>MiotorProgress</fullName>
            </value>
            <value>
                <fullName>Step by step Process</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>