force-app/main/default/objects/Associated_Training_Contacts__c/fields/D_What_is_the_purpose_of_assessing__c.field-meta.xml
<CustomField>
    <fullName>D_What_is_the_purpose_of_assessing__c</fullName>
    <inlineHelpText>What is the purpose of assessing the organization and assessing the change prior to developing change management plans?</inlineHelpText>
    <label>D-What is the purpose of assessing</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>