force-app/main/default/objects/Associated_Training_Contacts__c/fields/Day_1_AM__c.field-meta.xml
<CustomField>
    <fullName>Day_1_AM__c</fullName>
    <label>Day 1 AM</label>
    <length>10</length>
    <type>Text</type>
</CustomField>