force-app/main/default/objects/Associated_Training_Contacts__c/fields/Day_1_KC__c.field-meta.xml
<CustomField>
    <fullName>Day_1_KC__c</fullName>
    <label>Day 1 - KC %</label>
    <length>4</length>
    <type>Text</type>
</CustomField>