force-app/main/default/objects/Associated_Training_Contacts__c/fields/Day_1_PM__c.field-meta.xml
<CustomField>
    <fullName>Day_1_PM__c</fullName>
    <label>Day 1 PM</label>
    <length>10</length>
    <type>Text</type>
</CustomField>