force-app/main/default/objects/Associated_Training_Contacts__c/fields/Day_2_KC__c.field-meta.xml
<CustomField>
    <fullName>Day_2_KC__c</fullName>
    <label>Day 2 - KC %</label>
    <length>4</length>
    <type>Text</type>
</CustomField>