force-app/main/default/objects/Associated_Training_Contacts__c/fields/Did_not_receive_the_feedback__c.field-meta.xml
<CustomField>
    <fullName>Did_not_receive_the_feedback__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Did not receive the feedback?</label>
    <type>Checkbox</type>
</CustomField>