force-app/main/default/objects/Associated_Training_Contacts__c/fields/Dietary_needs__c.field-meta.xml
<CustomField>
    <fullName>Dietary_needs__c</fullName>
    <label>Dietary needs/Special Requirements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>