force-app/main/default/objects/Associated_Training_Contacts__c/fields/Discount_code__c.field-meta.xml
<CustomField>
    <fullName>Discount_code__c</fullName>
    <label>Discount code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>