force-app/main/default/objects/Associated_Training_Contacts__c/fields/E_Does_the_CM_team_have_a_role__c.field-meta.xml
<CustomField>
    <fullName>E_Does_the_CM_team_have_a_role__c</fullName>
    <inlineHelpText>Does the CM team have a role in the design of the solution and under what circumstances would the they make suggestions to influence the solution design?  List some specific areas of the solution (future state) that would be of particular interest to team</inlineHelpText>
    <label>E-Does the CM team have a role</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>