force-app/main/default/objects/Associated_Training_Contacts__c/fields/Educause_Member__c.field-meta.xml
<CustomField>
    <fullName>Educause_Member__c</fullName>
    <label>Educause Member</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>