force-app/main/default/objects/Associated_Training_Contacts__c/fields/Email_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Email_Feedback__c</fullName>
    <formula>Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email - Feedback</label>
    <type>Text</type>
</CustomField>