force-app/main/default/objects/Associated_Training_Contacts__c/fields/Essay_Exam_Scores__c.field-meta.xml
<CustomField>
    <fullName>Essay_Exam_Scores__c</fullName>
    <label>Essay Exam Scores</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>