force-app/main/default/objects/Associated_Training_Contacts__c/fields/Exam_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Exam_Percentage__c</fullName>
    <label>Exam Percentage</label>
    <type>TextArea</type>
</CustomField>