force-app/main/default/objects/Associated_Training_Contacts__c/fields/Exam_Score__c.field-meta.xml
<CustomField>
    <fullName>Exam_Score__c</fullName>
    <label>Exam Score</label>
    <length>10</length>
    <type>Text</type>
</CustomField>