force-app/main/default/objects/Associated_Training_Contacts__c/fields/F_Why_are_mgrs_supervisiors_socritical__c.field-meta.xml
<CustomField>
    <fullName>F_Why_are_mgrs_supervisiors_socritical__c</fullName>
    <inlineHelpText>Why are managers and supervisors so critical in times of change?</inlineHelpText>
    <label>F-Why are mgrs &amp; supervisiors socritical</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>