force-app/main/default/objects/Associated_Training_Contacts__c/fields/Fab5__c.field-meta.xml
<CustomField>
    <fullName>Fab5__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fab5</label>
    <type>Checkbox</type>
</CustomField>