force-app/main/default/objects/Associated_Training_Contacts__c/fields/Facilitator_Improvements__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_Improvements__c</fullName>
    <label>Facilitator Improvements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>