force-app/main/default/objects/Associated_Training_Contacts__c/fields/First_Name_Feedback__c.field-meta.xml
<CustomField>
    <fullName>First_Name_Feedback__c</fullName>
    <formula>Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Name - Feedback</label>
    <type>Text</type>
</CustomField>