force-app/main/default/objects/Associated_Training_Contacts__c/fields/Frequeny_Of_Use_Of_Methdology_Parts__c.field-meta.xml
<CustomField>
    <fullName>Frequeny_Of_Use_Of_Methdology_Parts__c</fullName>
    <label>Frequeny Of Use Of Methdology Parts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MethodologyPart</valueSetName>
    </valueSet>
</CustomField>