force-app/main/default/objects/Associated_Training_Contacts__c/fields/Fulfilled_Program_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Fulfilled_Program_Requirements__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box is the attendee filled all requirements and passed the program.</description>
    <inlineHelpText>Check this box is the attendee filled all requirements and passed the program.</inlineHelpText>
    <label>Fulfilled Program Requirements</label>
    <type>Checkbox</type>
</CustomField>