force-app/main/default/objects/Associated_Training_Contacts__c/fields/HB_Instructor_Type__c.field-meta.xml
<CustomField>
    <fullName>HB_Instructor_Type__c</fullName>
    <description>Hubspot field to fetch Instructor Type from related Training Event as Text Field</description>
    <formula>TEXT(Training_Event__r.Instructor_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HB Instructor Type</label>
    <type>Text</type>
</CustomField>