force-app/main/default/objects/Associated_Training_Contacts__c/fields/HB_Program_Title__c.field-meta.xml
<CustomField>
    <fullName>HB_Program_Title__c</fullName>
    <description>Hubspot Field to fetch Program Title from Training Event</description>
    <formula>TEXT(Training_Event__r.Title__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HB Program Title</label>
    <type>Text</type>
</CustomField>