force-app/main/default/objects/Associated_Training_Contacts__c/fields/HB_Status__c.field-meta.xml
<CustomField>
    <fullName>HB_Status__c</fullName>
    <description>Hubspot field to fetch the status value from ATC</description>
    <formula>TEXT( Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HB Status</label>
    <type>Text</type>
</CustomField>