force-app/main/default/objects/Associated_Training_Contacts__c/fields/HB_Type_of_Event__c.field-meta.xml
<CustomField>
    <fullName>HB_Type_of_Event__c</fullName>
    <description>Hubspot field to fetch the Type of Event from related Training Event</description>
    <formula>TEXT( Training_Event__r.Type_of_Event__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HB Type of Event</label>
    <type>Text</type>
</CustomField>