force-app/main/default/objects/Associated_Training_Contacts__c/fields/HB_VILT_Program__c.field-meta.xml
<CustomField>
    <fullName>HB_VILT_Program__c</fullName>
    <description>Hubspot field to set text TRUE if VILT Program else FALSE</description>
    <formula>IF( Training_Event__r.VILT_Program__c == TRUE , &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HB VILT Program</label>
    <type>Text</type>
</CustomField>