force-app/main/default/objects/Associated_Training_Contacts__c/fields/How_did_you_hear_about_this_program__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_hear_about_this_program__c</fullName>
    <label>How did you hear about this program?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>