force-app/main/default/objects/Associated_Training_Contacts__c/fields/How_would_you_rate_this_program__c.field-meta.xml
<CustomField>
    <fullName>How_would_you_rate_this_program__c</fullName>
    <label>How would you rate this program?</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>