force-app/main/default/objects/Associated_Training_Contacts__c/fields/Impact_Of_Applying_Methodology_Parts__c.field-meta.xml
<CustomField>
    <fullName>Impact_Of_Applying_Methodology_Parts__c</fullName>
    <label>Impact Of Applying Methodology Parts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MethodologyPart</valueSetName>
    </valueSet>
</CustomField>