force-app/main/default/objects/Associated_Training_Contacts__c/fields/Impact_of_Applying_PCT_Model__c.field-meta.xml
<CustomField>
    <fullName>Impact_of_Applying_PCT_Model__c</fullName>
    <label>Impact of Applying - PCT Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>