force-app/main/default/objects/Associated_Training_Contacts__c/fields/Impact_of_Applying_Three_Phase_Process__c.field-meta.xml
<CustomField>
    <fullName>Impact_of_Applying_Three_Phase_Process__c</fullName>
    <label>Impact of Applying - Three Phase Process</label>
    <length>100</length>
    <type>Text</type>
</CustomField>