force-app/main/default/objects/Associated_Training_Contacts__c/fields/Instructor_Name_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Name_Feedback__c</fullName>
    <formula>Training_Event__r.Assigned_Instructor__r.FirstName + &quot; &quot; +  Training_Event__r.Assigned_Instructor__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instructor Name - Feedback</label>
    <type>Text</type>
</CustomField>