force-app/main/default/objects/Associated_Training_Contacts__c/fields/Instructor_Type__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Type__c</fullName>
    <description>This is used for automation for Credly badging as well as the attendance edit/update list views</description>
    <formula>TEXT(Training_Event__r.Instructor_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instructor Type</label>
    <type>Text</type>
</CustomField>