force-app/main/default/objects/Associated_Training_Contacts__c/fields/intended_use_knowledge_gained__c.field-meta.xml
<CustomField>
    <fullName>intended_use_knowledge_gained__c</fullName>
    <label>Intended Use Knowledge Gained</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>