force-app/main/default/objects/Associated_Training_Contacts__c/fields/Interested_In__c.field-meta.xml
<CustomField>
    <fullName>Interested_In__c</fullName>
    <label>Interested In</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Applying CM</fullName>
            </value>
            <value>
                <fullName>Enterprise CM</fullName>
            </value>
            <value>
                <fullName>Teaching CM</fullName>
            </value>
            <value>
                <fullName>Building the Case for CM</fullName>
            </value>
            <value>
                <fullName>Advanced Change Management</fullName>
            </value>
            <value>
                <fullName>Enterprise Change Management</fullName>
            </value>
            <value>
                <fullName>Licensing</fullName>
            </value>
            <value>
                <fullName>Onsite Training</fullName>
            </value>
            <value>
                <fullName>Train the Trainer</fullName>
            </value>
            <value>
                <fullName>Webinars</fullName>
            </value>
            <value>
                <fullName>Change Management Advising</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>