force-app/main/default/objects/Associated_Training_Contacts__c/fields/Last_Name_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_Feedback__c</fullName>
    <formula>Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Name - Feedback</label>
    <type>Text</type>
</CustomField>