force-app/main/default/objects/Associated_Training_Contacts__c/fields/learning_objectives__c.field-meta.xml
<CustomField>
    <fullName>learning_objectives__c</fullName>
    <label>Learning Objectives</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>