force-app/main/default/objects/Associated_Training_Contacts__c/fields/Magento_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Magento_Order_Number__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This field is automatically populated by Magento/Buzzi connector. It is used to relate a Magento Order to a SF Associated Training Contact.</description>
    <inlineHelpText>This field is automatically populated by Magento/Buzzi connector. It is used to relate a Magento Order to a SF Associated Training Contact.</inlineHelpText>
    <label>Magento Order Number</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>