force-app/main/default/objects/Associated_Training_Contacts__c/fields/Material_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Material_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Material Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Associated Training Contacts (Material Opportunity)</relationshipLabel>
    <relationshipName>Associated_Training_Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>