force-app/main/default/objects/Associated_Training_Contacts__c/fields/Materials_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Materials_Delivered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Materials Delivered</label>
    <type>Checkbox</type>
</CustomField>