force-app/main/default/objects/Associated_Training_Contacts__c/fields/Multiple_Choice_Exam_Score__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Choice_Exam_Score__c</fullName>
    <label>Multiple Choice Exam Score</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>