force-app/main/default/objects/Associated_Training_Contacts__c/fields/No_Show_Notes__c.field-meta.xml
<CustomField>
    <fullName>No_Show_Notes__c</fullName>
    <label>No-Show Notes</label>
    <type>TextArea</type>
</CustomField>