force-app/main/default/objects/Associated_Training_Contacts__c/fields/Notes_for_Program__c.field-meta.xml
<CustomField>
    <fullName>Notes_for_Program__c</fullName>
    <label>Notes for Program</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>