force-app/main/default/objects/Associated_Training_Contacts__c/fields/Number_Of_Projects_Applied_Methodology__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Projects_Applied_Methodology__c</fullName>
    <label>Number Of Projects Applied Methodology</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>none</fullName>
            </value>
            <value>
                <fullName>one</fullName>
            </value>
            <value>
                <fullName>twoToFour</fullName>
            </value>
            <value>
                <fullName>fiveToTen</fullName>
            </value>
            <value>
                <fullName>eleventToTwenty</fullName>
            </value>
            <value>
                <fullName>moreThanTwenty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>