force-app/main/default/objects/Associated_Training_Contacts__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tuition Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Associated Training Contacts</relationshipLabel>
    <relationshipName>Associated_Training_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>