force-app/main/default/objects/Associated_Training_Contacts__c/fields/Order_No__c.field-meta.xml
<CustomField>
    <fullName>Order_No__c</fullName>
    <label>Order No.</label>
    <length>30</length>
    <type>Text</type>
</CustomField>