force-app/main/default/objects/Associated_Training_Contacts__c/fields/Order_Xero__c.field-meta.xml
<CustomField>
    <fullName>Order_Xero__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order (Xero)</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Associated Training Contacts</relationshipLabel>
    <relationshipName>Associated_Training_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>