force-app/main/default/objects/Associated_Training_Contacts__c/fields/Overall_commens__c.field-meta.xml
<CustomField>
    <fullName>Overall_commens__c</fullName>
    <label>Overall commens</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>