force-app/main/default/objects/Associated_Training_Contacts__c/fields/Overall_facilitators_attention__c.field-meta.xml
<CustomField>
    <fullName>Overall_facilitators_attention__c</fullName>
    <label>Overall facilitators attention</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>