force-app/main/default/objects/Associated_Training_Contacts__c/fields/Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount__c</fullName>
    <description>This read-only field automatically gets populated by the amount value in the related Tuition Opportunity</description>
    <inlineHelpText>This read-only field automatically gets populated by the amount value in the related Tuition Opportunity</inlineHelpText>
    <label>Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>