force-app/main/default/objects/Associated_Training_Contacts__c/fields/Payment_Information__c.field-meta.xml
<CustomField>
    <fullName>Payment_Information__c</fullName>
    <label>Payment Information</label>
    <type>TextArea</type>
</CustomField>