force-app/main/default/objects/Associated_Training_Contacts__c/fields/pct_change_management_score__c.field-meta.xml
<CustomField>
    <fullName>pct_change_management_score__c</fullName>
    <label>PCT Change Management Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>