force-app/main/default/objects/Associated_Training_Contacts__c/fields/percent_time_on_change_management__c.field-meta.xml
<CustomField>
    <fullName>percent_time_on_change_management__c</fullName>
    <label>Percentage Time On Change Management</label>
    <length>30</length>
    <type>Text</type>
</CustomField>