force-app/main/default/objects/Associated_Training_Contacts__c/fields/Pilot_pro__c.field-meta.xml
<CustomField>
    <fullName>Pilot_pro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pilot Pro</label>
    <type>Checkbox</type>
</CustomField>